<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inicio">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/boton1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/inicio_boton1" />

        <Button
            android:id="@+id/boton2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/boton1"
            android:text="@string/inicio_boton2" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/boton2"
            android:entries="@array/inicio_spinner1_values" />

        <Button
            android:id="@+id/boton3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/spinner1"
            android:text="@string/inicio_boton3" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>