<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToe">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tic_tac_toe_textview1"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="26sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton1"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/boton2"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/boton3"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton4"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/boton5"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/boton6"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <Button
                android:id="@+id/boton7"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/boton8"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/boton9"
                android:layout_width="110dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/blue_dark"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tic_tac_toe_textview2"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

    <android.widget.Button
        android:id="@+id/boton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"
        android:padding="14dp"
        android:text="@string/tic_tac_toe_boton10"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>